--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="square__triangle square__triangle--right"></div>
       <div class="square__triangle square__triangle--bottom"></div>
       <div class="square__triangle square__triangle--left"></div>
+      <input type="checkbox">
     </div>
   </body>
   </html>
